All the changes and landing page

--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -15,7 +15,7 @@
     <body>
 
 <!--This is the Banner section of the landing page-->
-        <section>
+        <section id="banner">
             <a href=""><img src="/media/images_and_Videos/logo_sample.jpg" class="logo"></a>
             <div class="banner-text">
                 <h2>Welcome to</h2>
@@ -29,7 +29,7 @@
         </section>
 
 <!--This is the Side Navigation section-->
-        <div>
+        <div id="sideNav">
             <nav>
                 <ul>
                     <li><a href="#banner">HOME</a></li>
@@ -40,17 +40,17 @@
                 </ul>
             </nav>
         </div>
-        <div>
+        <div id="menuBtn">
             <img src="/media/images_and_Videos/menu.png" id="menu">
         </div>
 
 <!--This is the Who we are section-->
-        <section>
-            <div>
-                <div>
+        <section class="who-we-are">
+            <div class="container">
+                <div class="img-section">
                     <img src="/media/images_and_Videos/pic4 (2).jpg" alt="">
                 </div>
-                <div>
+                <div class="content-section">
                     <h2>Who we are</h2>
                     <p>
                         Our website is dedicated to providing comprehensive wellness programs tailored for digital nomads. 
@@ -64,28 +64,28 @@
         </section>
 
 <!--This is the Aims sections-->
-        <section>
-            <div>
+        <section id="aim">
+            <div class="title-text">
                 <p><h1>Our Aims</h1></p>
                 <h3>We elevate your Remote Wellness</h3>
             </div>
-            <div>
-                <div>
+            <div class="aim-box">
+                <div class="aim2">
                     <h1>By Providing Tailored Wellness Programs</h1>
-                    <div>
-                        <div>
+                    <div class="aim-desc">
+                        <div class="aim-icon">
                             <i class="fa fa-shield"></i>
                         </div>
-                        <div>
+                        <div class="aim-text">
                             <p>Our objective is to offer customised nutrition and fitness plans that cater specifically to the needs of remote employees.<br> We understand the unique challenges faced by digital nomads and strive to provide practical and effective solutions.</p>
                         </div>
                     </div>
                     <h1>By promoting Health and Work-Life Balance</h1>
-                    <div>
-                        <div>
+                    <div class="aim-desc">
+                        <div class="aim-icon">
                             <i class="fa fa-check-square-o"></i>
                         </div>
-                        <div>
+                        <div class="aim-text">
                             <p>
                                 WellFit Life aims to empower individuals to prioritise their well-being and strike a harmonious balance between work and personal life.<br> 
                                 We believe that a healthy mind and body are essential for long-term success and happiness
@@ -93,11 +93,11 @@
                         </div>
                     </div>
                     <h1>By supporting Remote Workers</h1>
-                    <div>
-                        <div>
-                            <i></i>
+                    <div class="aim-desc">
+                        <div class="aim-icon">
+                            <i class="fa fa-inr"></i>
                         </div>
-                        <div>
+                        <div class="aim-text">
                             <p>
                                 We are committed to supporting remote professionals by providing access to expert guidance, resources,
                                 and practical tools to help them stay healthy, active, and motivated throughout their remote work journey.
