welness_packages.html

--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -22,8 +22,8 @@
                 <h1>WELL FIT LIFE</h1>
                 <p>...elevate your wellness</p>
                 <div class="banner-btn">
-                    <a href="#"><span></span>Nutrition</a>
-                    <a href="#"><span></span>Fitness</a>
+                    <a href="wellness_packages.html"><span></span>Nutrition</a>
+                    <a href="wellness_packages.html"><span></span>Fitness</a>
                 </div>
             </div>
         </section>
@@ -33,7 +33,7 @@
             <nav>
                 <ul>
                     <li><a href="#banner">HOME</a></li>
-                    <li><a href="#features">WELLNESS PACKAGES</a></li>
+                    <li><a href="wellness_packages.html">WELLNESS PACKAGES</a></li>
                     <li><a href="#Wwo">ABOUT US</a></li>
                     <li><a href="#testimonials">AVAIL PACKAGES</a></li>
                     <li><a href="#footer">CONTACT US</a></li>
