--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -90,7 +90,7 @@
                                 </ul>
                             </p>
                             <div class="bttn">
-                                <button class="packages_btn" onclick="document.location='#form'">Click to choose package</button>
+                                <button class="packages_btn" a href= "" onclick="document.location='#form'">Click to choose package</button>
                             </div>
                         </div>
                     </div>  
