--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -16,7 +16,7 @@
 
 <!--This is the Banner section of the landing page-->
         <section id="banner">
-            <a href=""><img src="/media/images_and_Videos/logo_sample.jpg" class="logo"></a>
+            <a href=""><img src="./media/images_and_Videos/logo_sample.jpg" class="logo"></a>
             <div class="banner-text">
                 <h2>Welcome to</h2>
                 <h1>WELL FIT LIFE</h1>
@@ -41,14 +41,14 @@
             </nav>
         </div>
         <div id="menuBtn">
-            <img src="/media/images_and_Videos/menu.png" id="menu">
+            <img src="./media/images_and_Videos/menu.png" id="menu">
         </div>
 
 <!--This is the Who we are section-->
         <section class="who-we-are">
             <div class="container">
                 <div class="img-section">
-                    <img src="/media/images_and_Videos/pic4 (2).jpg" alt="">
+                    <img src="./media/images_and_Videos/pic4 (2).jpg" alt="">
                 </div>
                 <div class="content-section">
                     <h2>Who we are</h2>
