wellness_packages.html

--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -90,7 +90,7 @@
                                 </ul>
                             </p>
                             <div class="bttn">
-                                <button class="packages_btn" a href= "" onclick="document.location='./css_styling/media/images_and_Videos/avail.html'">Click to choose package</button>
+                                <button class="packages_btn" a href= "" onclick="document.location='./avail.html'">Click to choose package</button>
                             </div>
                         </div>
                     </div>  
@@ -137,7 +137,7 @@
                                 </ul>
                             </p>
                             <div class="bttn">
-                                <button  class="packages_btn" onclick="document.location='./css_styling/media/images_and_Videos/avail.html'">Click to choose package</button>
+                                <button  class="packages_btn" onclick="document.location='./avail.html'">Click to choose package</button>
                             </div>
                         </div>
                     </div>
