wellness_packages.html

--- a/css_styling/about.html
+++ b/css_styling/about.html
@@ -30,7 +30,7 @@
                     <li><a href="#banner">HOME</a></li>
                     <li><a href="#features">WELLNESS PACKAGES</a></li>
                     <li><a href="#Wwo">ABOUT US</a></li>
-                    <li><a href="#testimonials">AVAIL PACKAGES</a></li>
+                    <li><a href="#testimonials">AVAILABLE PACKAGES</a></li>
                     <li><a href="#footer">CONTACT US</a></li>
                 </ul>
             </nav>
