--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -35,7 +35,7 @@
                     <li><a href="#banner">HOME</a></li>
                     <li><a href="wellness_packages.html">WELLNESS PACKAGES</a></li>
                     <li><a href="#Wwo">ABOUT US</a></li>
-                    <li><a href="#testimonials">AVAIL PACKAGES</a></li>
+                    <li><a href="#testimonials">AVAILABLE PACKAGES</a></li>
                     <li><a href="#footer">CONTACT US</a></li>
                 </ul>
             </nav>
