--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -34,7 +34,7 @@
                 <li><a href="./Home.html">HOME</a></li>
                 <li><a href="./wellness_packages.html">WELLNESS PACKAGES</a></li>
                 <li><a href="./about.html">ABOUT US</a></li>
-                <li><a href="#testimonials">AVAIL PACKAGES</a></li>
+                <li><a href="#testimonials">AVAILABLE PACKAGES</a></li>
                 <li><a href="#footer">CONTACT US</a></li>
             </ul>
         </nav>
