--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -32,10 +32,10 @@
         <div id="sideNav">
             <nav>
                 <ul>
-                    <li><a href="#banner">HOME</a></li>
-                    <li><a href="wellness_packages.html">WELLNESS PACKAGES</a></li>
-                    <li><a href="#Wwo">ABOUT US</a></li>
-                    <li><a href="#testimonials">AVAILABLE PACKAGES</a></li>
+                    <li><a href="./Home.html">HOME</a></li>
+                    <li><a href="./wellness_packages.html">WELLNESS PACKAGES</a></li>
+                    <li><a href="./about.html">ABOUT US</a></li>
+                    <li><a href="./about.html">AVAILABLE PACKAGES</a></li>
                     <li><a href="#footer">CONTACT US</a></li>
                 </ul>
             </nav>
