--- a/css_styling/about.html
+++ b/css_styling/about.html
@@ -15,7 +15,7 @@
     <!--Banner section -->
     <section class="banner">
         <a href="./Home.html">
-            <img src="./css_styling/media/images_and_Videos/black-logo.png" alt="logo" class="logo">
+            <img src="./css_styling/media/images_and_Videos/logo.png" alt="logo" class="logo">
         </a>
         <!-- Title -->
         <div class="about-text">
@@ -46,14 +46,11 @@
                 <div class="company">
                     <p>
                         We are committed to providing remote employees with a variety of wellness packages that focus on nutrition and fitness. <br>Our goal is to foster a healthy work-life balance by providing programs tailored to the demands of digital nomads. <br>With our wellness expertise, we seek to assist clients in maintaining their well-being while working remotely.
-                        <br>
                     </p>
                     <div>
-                        <a href="">
-                            <button type="button"><span></span>Nutrition</button>
-                        </a>
-                        <a href="">
-                            <button type="button"><span></span>Fitness</button>
+                        <p id="bold"><strong>Click below to see our wellness packages</strong></p>
+                        <a href="./wellness_packages.html">
+                            <button type="button"><span></span>HERE</button>
                         </a>
                     </div>
                     <!-- <div class="banner-btn">
