--- a/css_styling/about.html
+++ b/css_styling/about.html
@@ -27,7 +27,7 @@
         <div id="sideNav">
             <nav>
                 <ul>
-                    <li><a href="./about.html">HOME</a></li>
+                    <li><a href="./Home.html">HOME</a></li>
                     <li><a href="./wellness_packages.html">WELLNESS PACKAGES</a></li>
                     <li><a href="./about.html">ABOUT US</a></li>
                     <li><a href="./avail.html">AVAILABLE PACKAGES</a></li>
