--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -46,7 +46,7 @@
 
 <!--This is the Who we are section-->
         <section class="who-we-are">
-            <div class="container">
+            <div class="container-who">
                 <div class="img-section">
                     <img src="/media/images_and_Videos/pic4 (2).jpg" alt="">
                 </div>
@@ -112,30 +112,79 @@
             </div>
         </section>
 
+    <footer>
+        <div class="container-footer">
+            <div>
+                <h2>Check Out</h2>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Company</a></li>
+                    <li><a href="#">Press & Blog</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Quick Links</h2>
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Press & Blog</a></li>
+                    <li><a href="#">Feedbacks</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Shop</h2>
+                <ul>
+                    <li><a href="#">Store</a></li>
+                    <li><a href="#">Gift Cards</a></li>
+                    <li><a href="#">Student Discount</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Newsletter</h2>
+                <form>
+                    <input type="text" placeholder="Enter your text" />
+                    <button>Search</button>
+                </form>
+            </div>
+            <div class="social-links">
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-instagram"></i>
+                <i class="fa fa-linkedin"></i>
+                <i class="fa fa-snapchat"></i>
+                <i class="fa fa-youtube-play"></i>
+                <p>HTML/CSS_CONTEST GROUP4-original Tech broes</p>
+            </div>
+        </div>
+    </footer>
+
 <!--A little script for the menu and side nav. Nothing too serious-->
-<script>
-    var menuBtn = document.getElementById("menuBtn")
-    var sideNav = document.getElementById("sideNav")
-    var menu = document.getElementById("menu")
+    <script>
+        var menuBtn = document.getElementById("menuBtn")
+        var sideNav = document.getElementById("sideNav")
+        var menu = document.getElementById("menu")
 
-    sideNav.style.right ="-250px"
+        sideNav.style.right ="-250px"
 
-    menuBtn.onclick = function(){
-        if(sideNav.style.right == "-250px"){
-            sideNav.style.right = "0";
-            menu.src ="/media/images_and_Videos/close.png";
+        menuBtn.onclick = function(){
+            if(sideNav.style.right == "-250px"){
+                sideNav.style.right = "0";
+                menu.src ="/media/images_and_Videos/close.png";
+            }
+            else{
+            sideNav.style.right ="-250px";
+            menu.src ="/media/images_and_Videos/menu.png";
+            }
         }
-        else{
-        sideNav.style.right ="-250px";
-        menu.src ="/media/images_and_Videos/menu.png";
-        }
-    }
 
-var scroll = new SmoothScroll('a[href*="#"]', {
-    speed: 700,
-    speedAsDuration: true
-});
+    var scroll = new SmoothScroll('a[href*="#"]', {
+        speed: 700,
+        speedAsDuration: true
+    });
 
-</script
+    </script>
     </body>
 </html>
