--- a/css_styling/avail.html
+++ b/css_styling/avail.html
@@ -14,16 +14,11 @@
     </style>
 </head>
 <body>
-<<<<<<< HEAD:html_structures/avail.html
   <h1>Avail Packages</h1>
   
   <div id="initial-text">
-    <p>Please fill out the form below to let us know which wellness packages you would like to avail. Our team will reach out to you shortly to discuss the details and provide further assistance.</p>
+    <p>Please fill out the form below to let us know which wellness packages you would like to avail.</p>
   </div>
-=======
-  <h1>Available Packages</h1>
-  <p>Please fill out the form below to let us know which wellness packages you would like to avail. Our team will reach out to you shortly to discuss the details and provide further assistance.</p>
->>>>>>> 6e59e12adedc468b7bd44547a4efb56a3ffa1af8:css_styling/avail.html
   
   <form action="/submit" method="post">
     <label for="name">Full Name:</label>
