--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -16,7 +16,7 @@
 
         <!--This is the Banner section of the landing page-->
     <section>
-        <a href="./Home.html"><img src="./media/images_and_Videos/logo_sample.jpg" class="logo"></a>
+        <a href="./Home.html"><img src="./media/images_and_Videos/logo.png" class="logo"></a>
     </section>
 
 <!--This is the Banner section of the landing page-->
