--- a/css_styling/about.html
+++ b/css_styling/about.html
@@ -120,11 +120,11 @@
     menuBtn.onclick = function(){
         if(sideNav.style.right == "-250px"){
             sideNav.style.right = "0";
-            menu.src ="/media/images_and_Videos/close.png";
+            menu.src ="./media/images_and_Videos/close.png";
         }
         else{
         sideNav.style.right ="-250px";
-        menu.src ="./menu.png";
+        menu.src ="./media/images_and_Videos/menu.png";
         }
     }
 
