modifying the background image of the banner on the welness page

--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WellFit</title>
-        <link rel="stylesheet" href="wellness_packages.css">
         <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="wellness_packages.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,10 +15,9 @@
     </head>
     <body>
 <!--This is the Banner section of the landing page-->
-<section id="banner">
+<section id="banner2">
     <a href=""><img src="/media/images_and_Videos/logo_sample.jpg" class="logo"></a>
     <div class="banner-text">
-        <h2>Welcome to</h2>
         <h1>WELL FIT LIFE</h1>
         <p>...elevate your wellness</p>
         <div class="banner-btn">
