--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -18,11 +18,10 @@
 <section id="banner2">
     <a href=""><img src="/media/images_and_Videos/logo_sample.jpg" class="logo"></a>
     <div class="banner-text">
-        <h1>WELL FIT LIFE</h1>
-        <p>...elevate your wellness</p>
+        <h1>WELLNESS PACKAGES</h1>
         <div class="banner-btn">
-            <a href="wellness_packages.html"><span></span>Nutrition</a>
-            <a href="wellness_packages.html"><span></span>Fitness</a>
+            <a href="#nutrition"><span></span>Nutrition</a>
+            <a href="#fitness"><span></span>Fitness</a>
         </div>
     </div>
 </section>
@@ -44,10 +43,9 @@
 </div>
     <main>
             <!--This is the section for the packages-->
-                <h1>WELLNESS PACKAGES</h1>
                 <section class="Nut-pack">
                     <!-- Nutritional package section -->
-                        <h2>NUTRITION PACKAGES</h2>
+                        <h2 id="nutrition">NUTRITION PACKAGES</h2>
                         <div class="container1">
                             <p>
                                 Our nutrition packages are tailored to help you make informed food choices, manage your weight effectively, and develop a positive relationship with food.<br> Whether you're looking for personalized meal plans, expert consultations, or workshops on mindful eating, we have the right package to meet your needs.
@@ -102,7 +100,7 @@
                 <section class="Fit-pack">
                     <div class="Fitness_Plans">
                     <!-- Fitness plan section -->
-                        <h2>FITNESS PACKAGES</h2>
+                        <h2 id="fitness">FITNESS PACKAGES</h2>
                         <div class="container1">
                             <p>
                                 Stay active and energized with our fitness packages!<br> From invigorating group exercise classes led by certified instructors to personalized training programs designed to help you reach your fitness goals, we have something for everyone.<br> Join our classes, work with a personal trainer, or unwind at a wellness retreat to rejuvenate your body and mind.
