--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
     </head>
-    <body>
+    <body class="page">
 
         <!--This is the Banner section of the landing page-->
     <section>
@@ -57,7 +57,7 @@
                             <p>
                                 Nutrition is crucial in sustaining energy levels and overall health. 
                                 Our Nutrition Plans are tailored to provide remote employees with the necessary nutrients and guidance for optimal well-being. 
-                                <br><span class="offer">We offer the following packages:</span>
+                                <br><span class="offer">We offer the following nutritional packages:</span>
                             </p>
                         </div>
                         <div class="Nutritional_plan">
@@ -89,9 +89,9 @@
                                     <li><span class="desc">Program Details:</span> Plant-based meal suggestions, educational resources, and expert guidance.</li>
                                 </ul>
                             </p>
-                            <div class="bttn">
-                                <button class="packages_btn" a href= "" onclick="document.location='./avail.html'">Click to choose package</button>
-                            </div>
+                        </div>
+                        <div class="bttn">
+                            <button class="packages_btn" a href= "" onclick="document.location='./avail.html'">Click to choose package</button>
                         </div>
                     </div>  
                     <div class="Fitness_Plans">
@@ -104,7 +104,7 @@
                             <p>
                                 Staying physically active is crucial for maintaining a healthy lifestyle. 
                                 Our Fitness Plans are designed to help remote employees incorporate exercise into their daily routines, regardless of their location.
-                                <br><span class="offer">We offer the following packages:</span>
+                                <br><span class="offer">We offer the following fitness packages:</span>
                             </p>
                         </div>
                         <div class="fitness_plan">
@@ -136,9 +136,9 @@
                                     <li><span class="desc">Program Details:</span> Outdoor activity recommendations, safety guidelines, and suggested itineraries.</li>
                                 </ul>
                             </p>
-                            <div class="bttn">
-                                <button  class="packages_btn" onclick="document.location='./avail.html'">Click to choose package</button>
-                            </div>
+                        </div>
+                        <div class="bttn">
+                            <button  class="packages_btn" onclick="document.location='./avail.html'">Click to choose package</button>
                         </div>
                     </div>
                 </div>
@@ -150,6 +150,7 @@
                         inspiring them to embark on their remote wellness journey.
                     </p>
                 </div>
+                <div class="home_btn">
                 <button onclick="document.location='Home.html'">Back To Home</button>
                 </div>
             </div>
