--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -16,7 +16,7 @@
     <body>
 <!--This is the Banner section of the landing page-->
 <section id="banner2">
-    <a href=""><img src="/media/images_and_Videos/logo_sample.jpg" class="logo"></a>
+    <a href=""><img src="/media/images_and_Videos/logo.png" class="logo"></a>
     <div class="banner-text">
         <h1>WELLNESS PACKAGES</h1>
         <div class="banner-btn">
