--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -16,7 +16,7 @@
 
 <!--This is the Banner section of the landing page-->
         <section id="banner">
-            <a href=""><img src="./media/images_and_Videos/logo_sample.jpg" class="logo"></a>
+            <a href=""><img src="./media/images_and_Videos/logo.png" class="logo"></a>
             <div class="banner-text">
                 <h2>Welcome to</h2>
                 <h1>WELL FIT LIFE</h1>
@@ -58,7 +58,7 @@
                         and our aim is to support you in achieving optimal well-being. 
                         With WellFit Life, you can elevate your remote wellness and thrive in both your personal and professional life.
                     </p>
-                    <a href="" class="button">Read More</a>
+                    <a href="/about.html" class="button">Read More</a>
                 </div>
             </div>
         </section>
@@ -117,29 +117,20 @@
             <div>
                 <h2>Check Out</h2>
                 <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Company</a></li>
-                    <li><a href="#">Press & Blog</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="/about.html">About Us</a></li>
+                    <li><a href="/Home.html.container-who" target="_blank">Branches of Welfit</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=fcN37TxBE_s" target="_blank">Press & Blog</a></li>
+                    <li><a href="https://www.okoessentials.com.sg/pages/privacy-policy?gclid=CjwKCAjw4ZWkBhA4EiwAVJXwqRyWrSG-9Ze-NXEgv8NEtsKe1xXL_Oy4RK9V8UgCa1JAvmlg8wFJYxoC0nsQAvD_BwE" target="_blank">Privacy Policy</a></li>
                 </ul>
             </div>
             <div>
                 <h2>Quick Links</h2>
                 <ul>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Press & Blog</a></li>
-                    <li><a href="#">Feedbacks</a></li>
-                </ul>
-            </div>
-            <div>
-                <h2>Shop</h2>
-                <ul>
-                    <li><a href="#">Store</a></li>
-                    <li><a href="#">Gift Cards</a></li>
-                    <li><a href="#">Student Discount</a></li>
+                    <li><a href="/Home.html">Back to Home</a></li>
+                    <li><a href="/wellness_packages.html">Wellness packages</a></li>
+                    <li><a href="/about.html">About Welfit</a></li>
+                    <li><a href="/avail.html">Our packages</a></li>
+                    <li><a href="/Home.html">Feedbacks</a></li>
                 </ul>
             </div>
             <div>
@@ -148,16 +139,20 @@
                     <input type="text" placeholder="Enter your text" />
                     <button>Search</button>
                 </form>
+                <!-- <p class="footer-copyright">© Isaiah Essien 2023- i.essien@alustudent.com</p> -->
             </div>
             <div class="social-links">
+                <h2>Check our Socials</h2>
                 <i class="fa fa-facebook"></i>
                 <i class="fa fa-twitter"></i>
                 <i class="fa fa-instagram"></i>
                 <i class="fa fa-linkedin"></i>
                 <i class="fa fa-snapchat"></i>
                 <i class="fa fa-youtube-play"></i>
-                <p>HTML/CSS_CONTEST GROUP4-original Tech broes</p>
             </div>
+        </div>
+        <div class="footer-copyright">
+            <p>© html/css-contest G4- Original Tech Broes 2023</p>
         </div>
     </footer>
 
