footer and final ouches on other pages

--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -16,7 +16,7 @@
     <body>
 <!--This is the Banner section of the landing page-->
 <section id="banner2">
-    <a href=""><img src="/media/images_and_Videos/logo_sample.jpg" class="logo"></a>
+    <a href=""><img src="/media/images_and_Videos/logo.png" class="logo"></a>
     <div class="banner-text">
         <h1>WELLNESS PACKAGES</h1>
         <div class="banner-btn">
@@ -34,7 +34,6 @@
             <li><a href="wellness_packages.html">WELLNESS PACKAGES</a></li>
             <li><a href="#Wwo">ABOUT US</a></li>
             <li><a href="#testimonials">AVAIL PACKAGES</a></li>
-            <li><a href="#footer">CONTACT US</a></li>
         </ul>
     </nav>
 </div>
@@ -45,7 +44,7 @@
             <!--This is the section for the packages-->
                 <section class="Nut-pack">
                     <!-- Nutritional package section -->
-                        <h2 id="nutrition">NUTRITION PACKAGES</h2><br><br>
+                        <h2 id="nutrition"><span class="leaf">NUTRITION PACKAGES</span></h2><br><br>
                         <div class="container1">
                             <p>
                                 Our nutrition packages are tailored to help you make informed food choices, manage your weight effectively, and develop a positive relationship with food.<br> Whether you're looking for personalized meal plans, expert consultations, or workshops on mindful eating, we have the right package to meet your needs.
@@ -155,6 +154,8 @@
                     </section>
                     
                 </section>
+
+
         <!--A little script for the menu and side nav. Nothing too serious-->
 <script>
     var menuBtn = document.getElementById("menuBtn")
