--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -36,7 +36,6 @@
                     <li><a href="./wellness_packages.html">WELLNESS PACKAGES</a></li>
                     <li><a href="./about.html">ABOUT US</a></li>
                     <li><a href="./about.html">AVAILABLE PACKAGES</a></li>
-                    <li><a href="#footer">CONTACT US</a></li>
                 </ul>
             </nav>
         </div>
@@ -151,9 +150,9 @@
                 <i class="fa fa-youtube-play"></i>
             </div>
         </div>
-        <div class="footer-copyright">
+        <!-- <div class="footer-copyright">
             <p>© html/css-contest G4- Original Tech Broes 2023</p>
-        </div>
+        </div> -->
     </footer>
 
 <!--A little script for the menu and side nav. Nothing too serious-->
